cabal-version:   3.0
name:            hstdlib
version:         0.1.0.0
license:         NONE
author:          amhsm6@gmail.com
maintainer:      amhsm6
build-type:      Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings

    exposed-modules:  TDLib
                      TDLib.Action

    build-depends:    base ^>=4.18.2.1
                    , mtl
                    , stm
                    , text
                    , aeson
                    , haskell-tdlib

    hs-source-dirs:   src

    default-language: Haskell2010
